# hacknation26

./: .env.example  .env.production.example  .gitignore  .gitmodules  AGENTS.md  DEPLOYMENT.md  README.md  api_setup.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  high_level_description.md  nginx-http-only.conf  nginx.conf  quick-deploy-to-droplet.sh  setup-server.sh  slides.key  start_dev.sh  test_ace_connection.py  test_client.py  test_music_flow.py  test_vibetree_to_prompt.py
.do/: app.yaml
music_api_demo/: test.ipynb
python-backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.multistage  api_server.py  main.py  pyproject.toml  requirements.txt
python-backend/src/agent/: debug.py  mock_tree.py  music_agent.py  prompts.py
python-backend/src/api/: routes.py
python-backend/src/models/: music_prompt.py  snapshot.py  song_characteristics.py  song_tree.py
python-backend/src/preprocessing/: video.py
python-backend/src/services/: ace_step_client.py  music_service.py  snapshot_service.py
python-backend/src/tools/: __init__.py  web_search.py
python-backend/tests/: test_song_characteristics.py  test_vibetree_to_prompt.py  test_web_search_integration.py
report/: report.aux  report.bcf  report.lof  report.lot  report.out  report.run.xml  report.tex  report.toc  slides.tex
ui/: DOCS.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vibe_tree.md
ui/src/: App.css  App.tsx  index.css
ui/src/components/: DetailPanel.tsx  EdgeCanvas.tsx  GenerationMetadata.tsx  HistorySidebar.css  HistorySidebar.tsx  InputPanel.tsx  (+5 more)
(+9 files in other folders)
