[project]
name = "hacknation26"
version = "0.1.0"
description = "Multimodal memory to music — agentic pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "opencv-python-headless",
    "pillow",
    "httpx",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]
